# smart2x

./: .gitignore  LICENSE  README.md  pyproject.toml
smart2x/: cli.py  convert.py  whitelist.py
