[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart2x"
version = "0.1.0"
description = "Convert Smart-seq per-cell BAMs into 10x Chromium-compatible BAM format"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pysam>=0.22",
    "click>=8.0",
    "requests>=2.28",
    "tqdm>=4.0",
]

[project.scripts]
smart2x = "smart2x.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart2x*"]
